# diagrammer

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Icon-Integration.md  README.md  Specification.Readme.md  Taskfile.yml  Temporary-Copilot-Prompt.txt  Todo.Readme.md  Todo.Relay.md  Todo.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: docs.yml  pr-check.yml  release.yml
docs-site/: .gitignore  astro.config.mjs  index.md  package.json
docs-site/.vitepress/: config.mts  config.ts
docs-site/developer/: architecture.md  collaboration-protocol.md  contributing.md  core-systems.md  creating-shapes.md  creating-tools.md  plugin-development.md  project-setup.md  roadmap.md  shape-properties.md  state-management.md  utilities.md
docs-site/getting-started/: installation.md  interface-tour.md  introduction.md  quick-start.md
docs-site/guide/: canvas-navigation.md  canvas-tools.md  collaboration.md  connectors.md  drawing-tools.md  embedded-files.md  export-import.md  multi-page-documents.md  quick-start.md  rich-text-editor.md  shape-libraries.md  styling.md  welcome.md  whiteboard.md
docs-site/reference/: keyboard-shortcuts.md  settings.md
protocol-fixtures/: 01_auth_request.json  02_auth_login_request.json  03_auth_response.json  05_doc_list_response.json  06_doc_get_request.json  10_doc_delete_request.json  15_doc_share_response.json  17_doc_transfer_response.json  README.md
relay/: .gitignore  Cargo.toml
relay/src/: api.rs  documents.rs  lib.rs  main.rs  protocol.rs
relay/src/auth/: mod.rs
relay/src/server/: documents.rs  mod.rs  permissions.rs  protocol.rs
relay/tests/: smoke.rs
relay/tests/protocol-fixtures/: 04_doc_list_request.json  05_doc_list_response.json  07_doc_get_response.json  08_doc_save_request.json  09_doc_save_response.json  11_doc_delete_response.json  12_doc_event.json  13_join_doc_request.json  14_doc_share_request.json  16_doc_transfer_request.json  18_error_response.json
scripts/: create-shape.ts  prepare-icons.ts
src/: index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: jwt.rs  mod.rs  password.rs  users.rs
src-tauri/src/mcp/: adapter.rs  mod.rs  token.rs  tools.rs  transport.rs
src-tauri/src/server/: blobs.rs  documents.rs  mod.rs  permissions.rs  protocol.rs
src/api/: relayClient.test.ts  relayClient.ts  relayConnection.test.ts  relayConnection.ts  restDocumentProvider.test.ts  restDocumentProvider.ts
src/collaboration/: BlobSyncService.test.ts  BlobSyncService.ts  DocumentSyncProvider.ts  OfflineQueue.test.ts  OfflineQueue.ts  SyncProvider.ts  SyncStateManager.test.ts  SyncStateManager.ts  UnifiedSyncProvider.test.ts  UnifiedSyncProvider.ts  YjsDocument.ts  collaborationStore.test.ts  collaborationStore.ts  index.ts  protocol.fixtures.test.ts  protocol.test.ts  protocol.ts  useCollaborationSync.ts
src/engine/: Camera.test.ts  Camera.ts  CommandRegistry.ts  ContrastResolver.test.ts  ContrastResolver.ts  Engine.ts  HitTester.test.ts  HitTester.ts  InputHandler.test.ts  InputHandler.ts  KeyboardShortcuts.ts  OrthogonalRouter.ts  RenderContext.ts  Renderer.test.ts  Renderer.ts  Snapping.ts  SpatialIndex.test.ts  SpatialIndex.ts  ToolManager.test.ts  ToolManager.ts
src/hooks/: useAutoSave.ts
src/math/: Box.test.ts  Box.ts  Mat3.test.ts  Mat3.ts  Vec2.test.ts  Vec2.ts  geometry.test.ts  geometry.ts  index.ts
src/migrations/: relayRename.test.ts  relayRename.ts  teamDocumentMigration.test.ts  teamDocumentMigration.ts  teamDocumentMigrationHelpers.ts
src/plugins/: PanelExtensions.ts
src/services/: DocumentCacheManager.test.ts  DocumentCacheManager.ts  DocumentTransferService.test.ts  DocumentTransferService.ts  FileContentCache.ts  FileImportService.ts  FileIntegrityValidator.ts  FileReplaceService.ts  SpellcheckService.ts  ThumbnailGenerator.ts
src/shapes/: Connector.test.ts  Connector.ts  Ellipse.test.ts  Ellipse.ts  FileShape.test.ts  FileShape.ts  Group.ts  GroupHierarchy.test.ts  GroupHierarchy.ts  GroupStyles.ts  Line.test.ts  Line.ts  Rectangle.test.ts  Rectangle.ts  Shape.ts  ShapeMetadata.ts  ShapeRegistry.ts  Text.ts
src/storage/: ArchiveTypes.ts  ArchiveUtils.test.ts  ArchiveUtils.ts  AssetBundler.ts  AtomicFileWriter.ts  BackupExportService.ts  BackupImportService.ts  BackupService.test.ts  BlobGarbageCollector.ts  BlobStorage.ts  BlobTypes.ts  DocumentArchiveService.test.ts  DocumentArchiveService.ts  FileSystemBackend.ts  IconTypes.ts  LocalStorageBackend.ts  RelayDocumentCache.test.ts  RelayDocumentCache.ts  StorageBackend.ts  (+10 more)
(+309 files in other folders)
