[package]
name = "diagrammer"
version = "1.0.0"
description = "A high-performance diagramming and whiteboard application"
authors = ["Diagrammer Team"]
license = "MIT"
repository = "https://github.com/QR-Madness/diagrammer"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "diagrammer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Tauri
tauri = { version = "2.9.5", features = ["image-png"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

# Async runtime (for WebSocket server in Protected Local mode)
tokio = { version = "1", features = ["full"] }

# WebSocket server for Protected Local mode
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"

# JWT authentication for Protected Local mode (Phase 14.1)
jsonwebtoken = "9"
bcrypt = "0.15"
nanoid = "0.4"

# Network utilities for LAN IP detection
local-ip-address = "0.6"

# Future: CRDT support (uncomment when implementing Phase 14.0)
# yrs = "0.21"

[features]
default = []
# Enable when Protected Local mode is implemented
# protected-local = ["axum", "tower-http", "jsonwebtoken", "bcrypt", "yrs"]

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
opt-level = "s"
strip = true
