[package]
name = "diagrammer"
version = "1.3.1-beta.1"
description = "A high-performance diagramming and whiteboard application"
authors = ["Diagrammer Team"]
license = "MIT"
repository = "https://github.com/QR-Madness/diagrammer"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "diagrammer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Tauri — pin all plugins to exact minor versions matching tauri core
tauri = { version = "2.10.1", features = ["image-png"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2.5.3"

# Async runtime (for WebSocket server in Protected Local mode)
tokio = { version = "1", features = ["full"] }

# WebSocket server for Protected Local mode
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures-util = "0.3"
tokio-stream = "0.1"

# JWT authentication for Protected Local mode (Phase 14.1)
jsonwebtoken = "9"
bcrypt = "0.15"
nanoid = "0.4"

# Network utilities for LAN IP detection
local-ip-address = "0.6"

# Cryptographic hashing for blob storage (Phase 17.5)
sha2 = "0.10"
hex = "0.4"

# DevTools for debugging (guarded by cfg(debug_assertions) in code)
tauri-plugin-devtools = "2.0.1"

# Future: CRDT support (uncomment when implementing Phase 14.0)
# yrs = "0.21"

[features]
default = []
# Enable when Protected Local mode is implemented
# protected-local = ["axum", "tower-http", "jsonwebtoken", "bcrypt", "yrs"]

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }

[profile.release]
lto = true
opt-level = "s"
strip = true
